[gd_scene load_steps=8 format=3 uid="uid://bkyl1jp3lj36v"]

[ext_resource type="Script" path="res://main.gd" id="1_eqxpj"]
[ext_resource type="PackedScene" uid="uid://br8j0dbxk0gmh" path="res://Floors/floor.tscn" id="2_d85bv"]
[ext_resource type="PackedScene" uid="uid://chd56i23loj2b" path="res://Characters/draggable_character.tscn" id="3_ly3wx"]
[ext_resource type="FontFile" uid="uid://bgiywmusee28u" path="res://Marav2.ttf" id="3_qesbo"]
[ext_resource type="Texture2D" uid="uid://bvwlkd2t0p7wi" path="res://Assets/floor.png" id="3_w2f3j"]
[ext_resource type="Texture2D" uid="uid://c2nuxdwin3slv" path="res://Assets/brickIcon.png" id="4_l6brj"]
[ext_resource type="Texture2D" uid="uid://dj3lam7b5ypx" path="res://Assets/goldIcon.png" id="5_x8i3h"]

[node name="Main" type="Node2D"]
script = ExtResource("1_eqxpj")
tiers = ExtResource("2_d85bv")
draggableCharacters = ExtResource("3_ly3wx")

[node name="TextureRect" type="ColorRect" parent="."]
offset_right = 384.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect2" type="ColorRect" parent="."]
offset_left = 768.0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Tower" type="ScrollContainer" parent="."]
offset_left = 384.0
offset_right = 768.0
offset_bottom = 648.0
size_flags_vertical = 8
follow_focus = true
horizontal_scroll_mode = 0

[node name="Floors" type="VBoxContainer" parent="Tower"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 0
alignment = 1

[node name="TopFloor" type="TextureRect" parent="Tower/Floors"]
layout_mode = 2
texture = ExtResource("3_w2f3j")

[node name="Button" type="Button" parent="Tower/Floors/TopFloor"]
layout_mode = 0
offset_left = 18.0
offset_top = 28.0
offset_right = 178.0
offset_bottom = 92.0
text = "BUILD NEW FLOOR"

[node name="NewFloorLabel" type="Label" parent="Tower/Floors/TopFloor"]
layout_mode = 0
offset_left = 188.0
offset_top = 28.0
offset_right = 344.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("3_qesbo")
theme_override_font_sizes/font_size = 35
text = "BRICKS NEEDED:
"

[node name="Floor" parent="Tower/Floors" instance=ExtResource("2_d85bv")]
layout_mode = 2

[node name="GodBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.966667, 0, 1)
offset_left = 16.0
offset_top = 16.0
offset_right = 368.0
offset_bottom = 80.0
value = 25.0

[node name="BrickLabel" type="Label" parent="."]
offset_left = 152.0
offset_top = 96.0
offset_right = 280.0
offset_bottom = 224.0
theme_override_fonts/font = ExtResource("3_qesbo")
theme_override_font_sizes/font_size = 100
text = "9999"
vertical_alignment = 1
clip_text = true

[node name="GoldLabel" type="Label" parent="."]
offset_left = 152.0
offset_top = 232.0
offset_right = 280.0
offset_bottom = 360.0
theme_override_fonts/font = ExtResource("3_qesbo")
theme_override_font_sizes/font_size = 100
text = "9999"
vertical_alignment = 1
clip_text = true

[node name="BrickIcon" type="Sprite2D" parent="."]
position = Vector2(80, 160)
scale = Vector2(2, 2)
texture = ExtResource("4_l6brj")

[node name="GoldIcon" type="Sprite2D" parent="."]
position = Vector2(80, 296)
scale = Vector2(2, 2)
texture = ExtResource("5_x8i3h")

[node name="ResourceTimer" type="Timer" parent="."]
autostart = true

[node name="BuilderButton" type="Button" parent="."]
offset_left = 800.0
offset_top = 64.0
offset_right = 928.0
offset_bottom = 128.0
text = "Builder
10g"

[node name="MerchantButton" type="Button" parent="."]
offset_left = 992.0
offset_top = 64.0
offset_right = 1120.0
offset_bottom = 128.0
text = "Merchant
15g"

[node name="MasonButton" type="Button" parent="."]
offset_left = 800.0
offset_top = 192.0
offset_right = 928.0
offset_bottom = 256.0
text = "Mason
20g"

[node name="ShepherdButton" type="Button" parent="."]
offset_left = 992.0
offset_top = 192.0
offset_right = 1120.0
offset_bottom = 256.0
text = "Shepherd
30g"

[node name="WarriorButton" type="Button" parent="."]
offset_left = 800.0
offset_top = 320.0
offset_right = 928.0
offset_bottom = 384.0
text = "Warrior
45g"

[node name="DraggableCharacter" parent="." instance=ExtResource("3_ly3wx")]
position = Vector2(898, 448)

[connection signal="timeout" from="ResourceTimer" to="." method="_on_resource_timer_timeout"]
[connection signal="pressed" from="BuilderButton" to="." method="_on_builder_button_pressed"]
[connection signal="pressed" from="MerchantButton" to="." method="_on_merchant_button_pressed"]
